added 30px border radiuses on login, registration, and home page masks

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -62,7 +62,7 @@
     position: relative;
     "
   >
-    <div class="mask" style="background-color: rgba(0, 0, 0, 0.7)">
+    <div class="mask" style="background-color: rgba(0, 0, 0, 0.7); border-radius: 30px;">
       <div class="d-flex justify-content-center align-items-center h-100">
         <div class="text-white">
           <h1 class="mb-3">Speakeasy Travel</h1>
