--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -56,7 +56,7 @@
     style="background: url('https://cdn.pixabay.com/photo/2015/10/30/20/13/sunrise-1014711_960_720.jpg') no-repeat center center fixed;
     background-size: cover; min-height: 96vh;"
     >
-    <div class="mask" style="background-color: rgba(0,0,0,0.7)">
+    <div class="mask" style="background-color: rgba(0,0,0,0.7); border-radius: 30px">
       <div class="d-flex justify-content-center align-items-center h-100">
         <div class="text-white">
         <h1 class="mb-3">Login and start exploring</h1>
