--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -67,7 +67,7 @@
   style="background-image: url('https://cdn.pixabay.com/photo/2016/01/09/18/27/old-1130731_1280.jpg');
   background-size: cover;"
 >
-<div class="mask" style="background-color: rgba(0,0,0,0.7)">
+<div class="mask" style="background-color: rgba(0,0,0,0.7); border-radius: 30px;">
   <div class="d-flex justify-content-center align-items-center h-100">
     <div class="text-white">
     <h1 class="mb-3">Welcome to the registration Page!</h1> 
