--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -60,6 +60,11 @@
         <div class="text-white">
         <h1 class="mb-3">Login and start exploring</h1>
             <form action="/login" method="post">
+              <% if (message) { %>
+                <p style="color: red">
+                  <%= message %> 
+                </p>
+              <% } %>
               <div class="mb-3 row">
                 <label for="email" class="col-sm-2 col-form-label">Email</label>
                 <div class="col-sm-10">
