finished map styling

--- a/views/trips/show.ejs
+++ b/views/trips/show.ejs
@@ -61,49 +61,63 @@
         id="intro-example"
         class="p-0 text-left bg-image"
         style="background-image: url('https://cdn.pixabay.com/photo/2017/06/05/11/01/airport-2373727_1280.jpg');
-        background-size: cover;">
-          <div id='map' style='width: 400px; height: 300px;'></div>
+        background-size: cover;
+        min-height: 96vh;">
+          
+
+      <div class="container">
+        <div class="row">
+          <div class="col-sm float-left;" style="
+          color: white;
+          background-color: rgba(0,0,0,0.7);
+          max-width: fit-content;
+          border-radius: 30px;
+          padding: 30px;">
+            <h1 style="text-align: center;"><%= trip.name %></h1>
+            <br>
+              <%= trip.dateStart %>
+            </br>  
+            <br>
+              <%= trip.dateEnd %>
+            </br>
+            <br>
+              <%= trip.activities %>
+            </br>
+            <br>
+              <%= trip.notes %>
+            </br>
+            <br>
+              <%= trip.location %>
+            </br>
+            <br>
+              <%= trip.budget %>
+            </br>
+            <br>
+              <a class="btn btn-info" role="button" href="/trip/<%= trip._id %>/edit ">Edit Trip</a>
+            </br>
+            <br>
+              <form action="/trip/<%= trip._id %>?_method=DELETE" method="POST">
+                <input class="btn btn-danger" type="submit" value="Delete Trip" />
+              </form>
+            </br>
+          </div>            
+          <div class="col-sm"style="
+            color: white;
+            background-color: rgba(0,0,0,0.7);
+            max-width: fit-content;
+            border-radius: 30px;
+            padding: 30px;
+            margin-left: 200px;
+            ">
+            <div id='map' style='width: 400px; height: 600px;'></div>
+          </div>
+        </div>
+      </div>
+
 
       
-      <div style="
-      color: white;
-        background-color: rgba(0,0,0,0.7);
-          max-width: fit-content;
-          border-radius: 10%;
-          padding: 30px;
-          " 
-      >
-
-      <h1 style="text-align: center;"><%= trip.name %></h1>
-        <br>
-           <%= trip.dateStart %>
-        </br>  
-        <br>
-           <%= trip.dateEnd %>
-        </br>
-        <br>
-           <%= trip.activities %>
-        </br>
-        <br>
-           <%= trip.notes %>
-        </br>
-        <br>
-           <%= trip.location %>
-        </br>
-        <br>
-           <%= trip.budget %>
-        </br>
         
-        <br>
-            <a class="btn btn-info" role="button" href="/trip/<%= trip._id %>/edit ">Edit Trip</a>
-        </br>
-        <br>
-        <form action="/trip/<%= trip._id %>?_method=DELETE" method="POST">
-            <input class="btn btn-danger" type="submit" value="Delete Trip" />
-          </form>
-        </br>
-        
-        <script src="https://unpkg.com/@mapbox/mapbox-sdk/umd/mapbox-sdk.min.js"></script>
+  <script src="https://unpkg.com/@mapbox/mapbox-sdk/umd/mapbox-sdk.min.js"></script>
   <script>
     mapboxgl.accessToken = 'pk.eyJ1IjoiZHJ6b2lkYnVyZ2giLCJhIjoiY2tqMGZ6eGZrMXBiMzJ5cDI0YjdtY2U3cSJ9.U3g7IP8HDBDLjb4s93fMTw';
     
@@ -111,7 +125,7 @@
   var mapboxClient = mapboxSdk({ accessToken: mapboxgl.accessToken });
   console.log(mapboxClient);
     mapboxClient.geocoding.forwardGeocode({
-    query: 'Hawaii',
+    query: 'The Big Island, Hawaii',
     limit: 2
   })
     .send()
@@ -120,9 +134,9 @@
     console.log(match); 
     var map = new mapboxgl.Map({
     container: 'map',
-    style: 'mapbox://styles/mapbox/streets-v11',
+    style: 'mapbox://styles/mapbox/satellite-streets-v11',
     center: match.features[0].center,
-    zoom:5
+    zoom:7
     });
   });
 
