--- a/views/traveler/edit.ejs
+++ b/views/traveler/edit.ejs
@@ -6,20 +6,21 @@
     <title>Edit Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
+
 <body>
     <style>
-        /* Default height for small devices */
+      /* Default height for small devices */
+      #intro-example {
+        height: 600px;
+      }
+  
+      /* Height for devices larger than 992px */
+      @media (min-width: 992px) {
         #intro-example {
-          height: 600px;
+          height: 679px;
         }
-    
-        /* Height for devices larger than 992px */
-        @media (min-width: 992px) {
-          #intro-example {
-            height: 679px;
-          }
-        }
-      </style>
+      }
+    </style>
 
   <!-- navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white">
@@ -57,13 +58,13 @@
     </div>
   </nav>
 
-    <!-- background img -->
-    <div
-    id="intro-example"
-    class="p-5 text-center bg-image"
-    style="background-image: url('https://cdn.pixabay.com/photo/2013/02/21/19/06/drink-84533_1280.jpg');
-    background-size: cover; min-height: 96vh;
-    "
+  <!-- background img -->
+  <div
+  id="intro-example"
+  class="p-5 text-center bg-image"
+  style="background-image: url('https://cdn.pixabay.com/photo/2013/02/21/19/06/drink-84533_1280.jpg');
+  background-size: cover; min-height: 96vh;
+  "
   >
   
   <div class="mask" style="background-color: rgba(0,0,0,0.7); border-radius: 30px;">
@@ -108,12 +109,13 @@
            
           </div>
         </form>
+      </div>
     </div>
-    </div>
-    
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+  </div>
+
+  <!-- scripts for bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 </body>
 </html>
 
