final styling touches

--- a/views/trips/new.ejs
+++ b/views/trips/new.ejs
@@ -65,7 +65,8 @@
     background-size: cover;
     min-height: 93.3vh;"
   >
-    <div class="mask" style="background-color: rgba(0,0,0,0.7);">
+    <div class="mask" style="background-color: rgba(0,0,0,0.7);
+    border-radius: 30px;">
       <div class="d-flex justify-content-center align-items-center h-100">
         <div class="text-white">
       <h1 class="mb-3" style="min-width: 50vw;">Create a new trip</h1>
