--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -66,7 +66,8 @@
   id="intro-example"
   class="p-5 text-center bg-image"
   style="background-image: url('https://cdn.pixabay.com/photo/2016/01/09/18/27/old-1130731_1280.jpg');
-  background-size: cover;"
+  background-size: cover;
+  min-height: 97vh;"
 >
 <div class="mask" style="background-color: rgba(0,0,0,0.7); border-radius: 30px;">
   <div class="d-flex justify-content-center align-items-center h-100">
